--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         flex-wrap: wrap;
         justify-content: center;
       }
-
+      h2 {
+        color: white;
+      }
       nav ul li {
         margin: 5px;
       }
